--- a/models/explore_kernels.ipynb
+++ b/models/explore_kernels.ipynb
@@ -3889,6 +3889,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([100])"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.norm(Z-Z,1, dim=1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-1.3952e-02,  2.5840e-02, -3.2118e-01,  2.1337e-01, -2.8970e-01,\n",
+       "        -2.6276e-01, -1.3730e-01,  7.7827e-01, -1.3467e-02, -1.6367e-01,\n",
+       "         5.4663e-02, -9.9311e-02,  5.3369e-01,  1.3101e-01, -3.9026e-03,\n",
+       "        -4.5553e-01, -3.4995e-01, -7.2584e-02,  3.5259e-02,  3.2099e-01,\n",
+       "         3.0627e-01, -2.0453e-01, -2.7646e-02, -4.5064e-01, -4.8287e-01,\n",
+       "         4.1239e-02,  9.2802e-02, -3.9254e-01,  1.5124e-01,  1.6754e-01,\n",
+       "        -6.0229e-01, -2.6169e-01, -5.5054e-01,  2.0270e-01, -4.2944e-02,\n",
+       "        -4.6551e-02, -4.1715e-01,  3.6657e-01,  9.0163e-02,  2.2749e-01,\n",
+       "         4.1847e-02,  8.0757e-02,  6.7975e-02, -2.6350e-01, -1.9787e-02,\n",
+       "         4.9938e-01, -4.9173e-01,  1.3014e-01, -2.6772e-01, -4.3873e-02,\n",
+       "         1.1214e-02, -1.5124e-01, -9.2831e-02, -4.9891e-01,  3.3136e-01,\n",
+       "        -2.4171e-01, -1.3217e-02, -1.4970e-01,  7.0009e-01,  2.5851e-01,\n",
+       "        -3.2905e-02,  4.5714e-01, -1.9257e-01, -9.7294e-02,  3.3043e-01,\n",
+       "        -1.5251e-01,  4.1492e-01,  6.4890e-02, -2.4822e-01, -4.7510e-01,\n",
+       "        -1.5762e-01, -5.2105e-02,  3.3885e-01, -7.5446e-02,  3.9929e-01,\n",
+       "        -5.8804e-01, -3.0104e-01,  3.2694e-01,  1.6971e-01,  6.9964e-04,\n",
+       "         6.7277e-02,  1.2328e-01,  1.3696e-01,  6.4628e-02, -7.9446e-02,\n",
+       "         1.3876e-01, -3.0482e-01, -1.7154e-01, -4.5254e-01, -5.0683e-01,\n",
+       "        -1.4752e-02,  3.8905e-02,  4.3286e-01, -7.2306e-01, -4.3247e-01,\n",
+       "        -3.9228e-01,  1.6283e-01,  1.9179e-01, -4.0291e-01,  1.3598e-01])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z.mean(dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
