unveiled MNIST gray mistery, and other similar adventures

--- a/visualisations/test_features.ipynb
+++ b/visualisations/test_features.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "<module 'experiments.EvaluationManager' from 'C:\\\\Users\\\\Giulia\\\\Study\\\\projects\\\\research\\\\SAE\\\\experiments\\\\EvaluationManager.py'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,51 +111,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from experiments.EvaluationManager import ModelHandler"
+    "from experiments.EvaluationManager import ModelHandler, VisualModelHandler, VectorModelHandler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found existing config file: loading.\n",
-      "====== Opening RFD Dataset - train ======\n",
-      "Factors dictionary already created. Proceed to reading.\n",
-      "====== Opening RFD Dataset - test ======\n",
-      "Factors dictionary already created. Proceed to reading.\n",
-      "====== Opening RFD Dataset - HC ======\n",
-      "Factors dictionary already created. Proceed to reading.\n",
-      "====== Opening RFD Dataset - real ======\n",
-      "Categorising labels...\n",
-      "Factors dictionary already created. Proceed to reading.\n",
-      "BaseSAE model loaded.\n"
+      "Files already there. Proceed to reading.\n",
+      "Loading generated data.\n",
+      "Loading metadata\n",
+      "Dataset loaded.\n",
+      "Files already there. Proceed to reading.\n",
+      "Loading generated data.\n",
+      "Loading metadata\n",
+      "Dataset loaded.\n",
+      "VecESAE model loaded.\n"
      ]
     }
    ],
    "source": [
-    "handler = ModelHandler(model_name=\"BaseSAE\", model_version=\"v16\", data=\"RFDh5\")"
+    "handler = VectorModelHandler(model_name=\"VecESAE\", model_version=\"standard\", data=\"SynthVec\", data_version=\"standard\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available checkpoints at logs\\BaseSAE\\v16_RFDh5\\checkpoints :\n",
-      "['logs\\\\BaseSAE\\\\v16_RFDh5\\\\checkpoints\\\\epoch=0-step=1799-v1.ckpt', 'logs\\\\BaseSAE\\\\v16_RFDh5\\\\checkpoints\\\\epoch=0-step=1799.ckpt', 'logs\\\\BaseSAE\\\\v16_RFDh5\\\\checkpoints\\\\epoch=0-step=198.ckpt', 'logs\\\\BaseSAE\\\\v16_RFDh5\\\\checkpoints\\\\epoch=1-step=1998.ckpt']\n"
+      "Available checkpoints at logs\\VecESAE\\standard_SynthVec\\checkpoints :\n",
+      "['logs\\\\VecESAE\\\\standard_SynthVec\\\\checkpoints\\\\epoch=2-step=1293.ckpt', 'logs\\\\VecESAE\\\\standard_SynthVec\\\\checkpoints\\\\epoch=5-step=2787.ckpt']\n"
      ]
     }
    ],
@@ -165,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -174,16 +172,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading latest checkpoint at logs\\BaseSAE\\v16_RFDh5\\checkpoints\\epoch=1-step=1998.ckpt .\n",
-      "====== Opening RFD Dataset - train ======\n",
-      "Factors dictionary already created. Proceed to reading.\n",
-      "====== Opening RFD Dataset - test ======\n",
-      "Factors dictionary already created. Proceed to reading.\n",
-      "====== Opening RFD Dataset - HC ======\n",
-      "Factors dictionary already created. Proceed to reading.\n",
-      "====== Opening RFD Dataset - real ======\n",
-      "Categorising labels...\n",
-      "Factors dictionary already created. Proceed to reading.\n"
+      "Loading latest checkpoint at logs\\VecESAE\\standard_SynthVec\\checkpoints\\epoch=5-step=2787.ckpt .\n",
+      "Files already there. Proceed to reading.\n",
+      "Loading generated data.\n",
+      "Loading metadata\n",
+      "Dataset loaded.\n",
+      "Files already there. Proceed to reading.\n",
+      "Loading generated data.\n",
+      "Loading metadata\n",
+      "Dataset loaded.\n"
      ]
     }
    ],
