--- a/visualisations/Scoring.ipynb
+++ b/visualisations/Scoring.ipynb
@@ -62,23 +62,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_names = [\"SAE\",\"ESAE\",\"VAE\", \"RSAE\"]\n",
-    "scores_df = pd.DataFrame()\n",
-    "scores_df[\"model_name\"] = model_names\n",
-    "all_scores = []"
+    "#load all scores and save them in lists \n",
+    "#extract relevan numbers from the lists and form a df\n",
+    "# plot df with seaborn\n",
+    "model_names = [\"BaseSAE\",\"ESAE\",\"RSAE\",\"RAE\"]\n",
+    "model_versions = [[\"standardS\"], [\"standardS\"], [\"standardS\"], [\"standardS\"]]\n",
+    "\n",
+    "model_params=[]\n",
+    "for i,model_n in enumerate(model_names): \n",
+    "    for model_v in model_versions[i]:\n",
+    "        _params = {\"model_name\":model_n,\n",
+    "                   \"model_version\":model_v,\n",
+    "                   \"data\":\"MNIST\"}\n",
+    "        model_params.append(_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "configs/models/BaseSAE/standardS.yaml\n",
+      "BaseSAE model hanlder loaded.\n",
+      "configs/models/ESAE/standardS.yaml\n",
+      "ESAE model hanlder loaded.\n",
+      "Preparing the model for scoring orthogonality ...\n",
+      "Scoring orthogonality\n",
+      "RBF scoring\n",
+      "IMQ scoring\n",
+      "CAT scoring\n",
+      "dCov scoring\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\giulia\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\dcor\\_fast_dcov_avl.py:317: UserWarning: Falling back to uncompiled AVL fast distance covariance because of TypeError exception raised: No matching definition for argument type(s) array(float32, 1d, A), array(float32, 1d, A), bool. Rembember: only floating point values can be used in the compiled implementations.\n",
+      "  warnings.warn(f\"Falling back to uncompiled AVL fast distance \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed for scoring 21\n",
+      "configs/models/RSAE/standardS.yaml\n",
+      "RSAE model hanlder loaded.\n",
+      "configs/models/RAE/standardS.yaml\n",
+      "RAE model hanlder loaded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores=[]\n",
+    "for params in model_params:\n",
+    "        handler = (VectorModelHandler.from_config(**params, verbose=False))\n",
+    "        handler.config[\"logging_params\"][\"save_dir\"] = \"./logs\"\n",
+    "        if params[\"model_name\"]==\"ESAE\": \n",
+    "            handler.score_model(FID=False, disentanglement=False, orthogonality=True, save_scores=True)\n",
+    "        scores.append(handler.load_scores(name=\"scoring\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: load handlers and scores "
+    "# fill the dataframe\n",
+    "scores_df = pd.DataFrame()\n",
+    "scores_df[\"model_name\"] = [params[\"model_name\"] for params in model_params]\n",
+    "scores_df[\"model_version\"] = [params[\"model_version\"] for params in model_params]\n",
+    "for i,score_set in enumerate(scores):\n",
+    "    try: \n",
+    "        for k,v in score_set.items():\n",
+    "            scores_df.loc[i,k] = v\n",
+    "    except AttributeError: \n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>model_version</th>\n",
+       "      <th>RBF</th>\n",
+       "      <th>IMQ</th>\n",
+       "      <th>dCOV</th>\n",
+       "      <th>DCI</th>\n",
+       "      <th>IRS</th>\n",
+       "      <th>MIG</th>\n",
+       "      <th>ModExp</th>\n",
+       "      <th>SAP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BaseSAE</td>\n",
+       "      <td>standardS</td>\n",
+       "      <td>0.002958</td>\n",
+       "      <td>0.019115</td>\n",
+       "      <td>0.000636</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.383157</td>\n",
+       "      <td>0.042366</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ESAE</td>\n",
+       "      <td>standardS</td>\n",
+       "      <td>0.003162</td>\n",
+       "      <td>0.019459</td>\n",
+       "      <td>0.000932</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RSAE</td>\n",
+       "      <td>standardS</td>\n",
+       "      <td>0.002829</td>\n",
+       "      <td>0.024132</td>\n",
+       "      <td>0.191865</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.633627</td>\n",
+       "      <td>0.030117</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RAE</td>\n",
+       "      <td>standardS</td>\n",
+       "      <td>0.003220</td>\n",
+       "      <td>0.021931</td>\n",
+       "      <td>0.368964</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.657804</td>\n",
+       "      <td>0.030811</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.050</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  model_name model_version       RBF       IMQ      dCOV  DCI       IRS  \\\n",
+       "0    BaseSAE     standardS  0.002958  0.019115  0.000636  NaN  0.383157   \n",
+       "1       ESAE     standardS  0.003162  0.019459  0.000932  NaN       NaN   \n",
+       "2       RSAE     standardS  0.002829  0.024132  0.191865  NaN  0.633627   \n",
+       "3        RAE     standardS  0.003220  0.021931  0.368964  NaN  0.657804   \n",
+       "\n",
+       "        MIG  ModExp    SAP  \n",
+       "0  0.042366     NaN  0.000  \n",
+       "1       NaN     NaN    NaN  \n",
+       "2  0.030117     NaN  0.012  \n",
+       "3  0.030811     NaN  0.050  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_df.drop(\"CAT\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores_df.to_csv(\"Scores.csv\")"
    ]
   },
   {
@@ -986,6 +1182,15 @@
    "outputs": [],
    "source": [
     "#TODO: adjust plotting for visual datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.boxplot(x='model_name',y=k,data=scores_df, ax=axs[0], hue=\"model_version\",palette=\"Blues\")"
    ]
   },
   {
