all the latent distortions notebook stuff + DRIFT

--- a/visualisations/Scoring.ipynb
+++ b/visualisations/Scoring.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,15 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#load all scores and save them in lists \n",
     "#extract relevan numbers from the lists and form a df\n",
     "# plot df with seaborn\n",
-    "model_names = [\"BaseSAE\",\"ESAE\",\"RSAE\",\"RAE\", \"BetaVAE\"]\n",
-    "model_versions = [[\"standardS\"], [\"standardS\"], [\"standardS\"],[\"standardS\"], [\"standardS\"]]\n",
+    "model_names = [\"BaseSAE\",\"ESAE\",\"RSAE\",\"RAE\", \"BetaVAE\", \"AE\"]\n",
+    "model_versions = [[\"standardS\", \"standard\"], [\"standardS\", \"standard\"], \n",
+    "                  [\"standardS\", \"standard\"],[\"standardS\", \"standard\"], \n",
+    "                  [\"standardS\", \"standard\"], [\"standardS\", \"standard\"]]\n",
     "\n",
     "model_params=[]\n",
     "for i,model_n in enumerate(model_names): \n",
@@ -83,9 +85,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "configs/models/BaseSAE/standardS.yaml\n",
+      "BaseSAE model hanlder loaded.\n",
+      "BaseSAE model hanlder loaded.\n",
+      "configs/models/ESAE/standardS.yaml\n",
+      "ESAE model hanlder loaded.\n",
+      "ESAE model hanlder loaded.\n",
+      "configs/models/RSAE/standardS.yaml\n",
+      "RSAE model hanlder loaded.\n",
+      "RSAE model hanlder loaded.\n",
+      "configs/models/RAE/standardS.yaml\n",
+      "RAE model hanlder loaded.\n",
+      "RAE model hanlder loaded.\n",
+      "configs/models/BetaVAE/standardS.yaml\n",
+      "BetaVAE model hanlder loaded.\n",
+      "BetaVAE model hanlder loaded.\n",
+      "configs/models/AE/standardS.yaml\n",
+      "AE model hanlder loaded.\n",
+      "AE model hanlder loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "scores=[]\n",
     "for params in model_params:\n",
@@ -96,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,16 +141,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>model_version</th>\n",
+       "      <th>RBF</th>\n",
+       "      <th>IMQ</th>\n",
+       "      <th>dCOV</th>\n",
+       "      <th>DCI</th>\n",
+       "      <th>IRS</th>\n",
+       "      <th>MIG</th>\n",
+       "      <th>ModExp</th>\n",
+       "      <th>SAP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BaseSAE</td>\n",
+       "      <td>standardS</td>\n",
+       "      <td>0.002196</td>\n",
+       "      <td>0.018936</td>\n",
+       "      <td>0.230804</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.633436</td>\n",
+       "      <td>0.023126</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BaseSAE</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>0.003279</td>\n",
+       "      <td>0.016918</td>\n",
+       "      <td>0.099984</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.533098</td>\n",
+       "      <td>0.113204</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ESAE</td>\n",
+       "      <td>standardS</td>\n",
+       "      <td>0.002912</td>\n",
+       "      <td>0.020665</td>\n",
+       "      <td>0.334244</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.375833</td>\n",
+       "      <td>0.025263</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ESAE</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>0.007102</td>\n",
+       "      <td>0.027555</td>\n",
+       "      <td>0.240115</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.379049</td>\n",
+       "      <td>0.049505</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>RSAE</td>\n",
+       "      <td>standardS</td>\n",
+       "      <td>0.002542</td>\n",
+       "      <td>0.020354</td>\n",
+       "      <td>0.179449</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.594522</td>\n",
+       "      <td>0.052622</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>RSAE</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>0.003028</td>\n",
+       "      <td>0.015953</td>\n",
+       "      <td>0.094997</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.539491</td>\n",
+       "      <td>0.009789</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>RAE</td>\n",
+       "      <td>standardS</td>\n",
+       "      <td>0.002562</td>\n",
+       "      <td>0.018454</td>\n",
+       "      <td>0.264318</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.667739</td>\n",
+       "      <td>0.020179</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>RAE</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>0.002874</td>\n",
+       "      <td>0.015218</td>\n",
+       "      <td>0.084057</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.547090</td>\n",
+       "      <td>0.002940</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>BetaVAE</td>\n",
+       "      <td>standardS</td>\n",
+       "      <td>0.001353</td>\n",
+       "      <td>0.010462</td>\n",
+       "      <td>0.129063</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.499915</td>\n",
+       "      <td>0.031921</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>BetaVAE</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>0.001383</td>\n",
+       "      <td>0.010642</td>\n",
+       "      <td>0.061215</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.457303</td>\n",
+       "      <td>0.121738</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>AE</td>\n",
+       "      <td>standardS</td>\n",
+       "      <td>0.004495</td>\n",
+       "      <td>0.028935</td>\n",
+       "      <td>0.436978</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.692512</td>\n",
+       "      <td>0.010258</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>AE</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>0.002313</td>\n",
+       "      <td>0.013756</td>\n",
+       "      <td>0.050665</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.519188</td>\n",
+       "      <td>0.017097</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.004</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model_name model_version       RBF       IMQ      dCOV  DCI       IRS  \\\n",
+       "0     BaseSAE     standardS  0.002196  0.018936  0.230804  NaN  0.633436   \n",
+       "1     BaseSAE      standard  0.003279  0.016918  0.099984  NaN  0.533098   \n",
+       "2        ESAE     standardS  0.002912  0.020665  0.334244  NaN  0.375833   \n",
+       "3        ESAE      standard  0.007102  0.027555  0.240115  NaN  0.379049   \n",
+       "4        RSAE     standardS  0.002542  0.020354  0.179449  NaN  0.594522   \n",
+       "5        RSAE      standard  0.003028  0.015953  0.094997  NaN  0.539491   \n",
+       "6         RAE     standardS  0.002562  0.018454  0.264318  NaN  0.667739   \n",
+       "7         RAE      standard  0.002874  0.015218  0.084057  NaN  0.547090   \n",
+       "8     BetaVAE     standardS  0.001353  0.010462  0.129063  NaN  0.499915   \n",
+       "9     BetaVAE      standard  0.001383  0.010642  0.061215  NaN  0.457303   \n",
+       "10         AE     standardS  0.004495  0.028935  0.436978  NaN  0.692512   \n",
+       "11         AE      standard  0.002313  0.013756  0.050665  NaN  0.519188   \n",
+       "\n",
+       "         MIG  ModExp    SAP  \n",
+       "0   0.023126     NaN  0.008  \n",
+       "1   0.113204     NaN  0.006  \n",
+       "2   0.025263     NaN  0.012  \n",
+       "3   0.049505     NaN  0.006  \n",
+       "4   0.052622     NaN  0.008  \n",
+       "5   0.009789     NaN  0.030  \n",
+       "6   0.020179     NaN  0.030  \n",
+       "7   0.002940     NaN  0.008  \n",
+       "8   0.031921     NaN  0.020  \n",
+       "9   0.121738     NaN  0.028  \n",
+       "10  0.010258     NaN  0.030  \n",
+       "11  0.017097     NaN  0.004  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores_df.drop(\"CAT\", axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
